# pyright-bug-repro

./: pyproject.toml
pyright_repro/models/: auth.py  identity.py
